[package]
name = "hashtree"
version = "0.2.1"
authors = ["sigrvn"]
license = "MIT"
edition = "2018"
description = "A Merkle Tree implementation in Rust"
repository = "https://github.com/sigrvn/hashtree"

keywords = ["merkle-tree"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"

[dev-dependencies]
hex-literal = "0.3.4"
